--- a/VRChat/67/1336967.html
+++ b/VRChat/67/1336967.html
@@ -79,7 +79,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "SitdfjCi8QSmpd8cHL3TT24WULrHBfTDf/gP2GdJAsw="></script>
+    "Qg+ElUCciI9CraRh+Vbxv8R73fK/WiEfbkjUbbOn1CM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"塹壕シャベル","description":"◆　掘ってよし、斬ってよし、殴ってよし。\n　　お庭のお手入れから白兵戦まで大活躍！\n　　個人携行用の小型シャベルの3Dモデルです。\n　　prefab設定済みでUnityでの導入簡単です。\n\n　(2020/04/14アップデート)\n　　柄の長さ・刃先の形状をシェイプキーで変えられるようになりました。\n　　場面に合わせてお使いわけいただけます。\n　　\n　　三角面：△2948","url":"https://booth.pm/ja/items/1336967","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/866dbe17-ef91-48b7-8c82-b92e350a81ed/i/1336967/dde9b9c6-118f-4faa-b3e6-219d9dd35860_base_resized.jpg"}
     </script>
@@ -93,7 +93,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="SitdfjCi8QSmpd8cHL3TT24WULrHBfTDf/gP2GdJAsw="></script>
+    nonce="Qg+ElUCciI9CraRh+Vbxv8R73fK/WiEfbkjUbbOn1CM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -167,7 +167,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      127
+                                      128
                                     </div>
                                   </div></a><a class=
                                   "remove-from-wish-list no-underline !text-current"
@@ -183,7 +183,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      127
+                                      128
                                     </div>
                                   </div></a>
                                 </div>
@@ -461,9 +461,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
