--- a/VRChat/63/1336663.html
+++ b/VRChat/63/1336663.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "mX+NfQh1tKqxAUGj9BqW3/lXCOzKtBpDnkYg7jps/Wo="></script>
+    "9tRFF1T9JTiRGXjUTjthFh3I4Hr2DhKRr6aHXk0BOtQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat向け　一口ご飯","description":"VRchat向けアクセサリ：イクラとごはんレンゲ・生クリームスプーンデザート\nunityパッケージが入っております\n\n画像はarktoon-shaders-1.0.1.4を使用しています。\nシェーダーは「synqark」様のbooth「https://booth.pm/ja/items/1027997」にて配布されております\n\n必ず事前に上記シェーダーをunity内にインポートしてください。\n（しない場合マテリアルが正常に読み込まれません）","url":"https://booth.pm/ja/items/1336663","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/eaae416f-80ca-4582-baa6-17cd5c7d41ab/i/1336663/8af0bbd1-a6b7-4a0b-b4ff-a1ec63939d5c_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="mX+NfQh1tKqxAUGj9BqW3/lXCOzKtBpDnkYg7jps/Wo="></script>
+    nonce="9tRFF1T9JTiRGXjUTjthFh3I4Hr2DhKRr6aHXk0BOtQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -376,9 +376,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
