--- a/VRChat/30/1126930.html
+++ b/VRChat/30/1126930.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "9ocHO4vFUj/sMr4dedH7TsKe/yj859OgQnAD0Lju5hU="></script>
+    "35zmfKprM/DiTheIuwc3JgxoNpHY4WWuARmfvubNzcs="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRC用　恋人（とか）と一緒だとハートが出るアクセサリ","description":"他人の迷惑にならない様に、時と場所を弁えて使ってください。\n参考動画（https://twitter.com/kazenainannna/status/1068838178633609216）\n\n画像付きの説明PDFを追加しました。","url":"https://booth.pm/ja/items/1126930","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/4367a840-2f6a-4ba3-b547-41699c7045cb/i/1126930/9b2440a3-4223-4711-a1c3-e61074fdf031_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="9ocHO4vFUj/sMr4dedH7TsKe/yj859OgQnAD0Lju5hU="></script>
+    nonce="35zmfKprM/DiTheIuwc3JgxoNpHY4WWuARmfvubNzcs="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -581,9 +581,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
