--- a/VRChat/96/1129496.html
+++ b/VRChat/96/1129496.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "OLwIKuSydFYAMuuoxjQcIIC+jshdqvQ8mRxF6ol5x54="></script>
+    "J5K80B2u3gYuI5VbLKfydFfuZJIblt0efVz4vULRA48="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRchat向け　宝石セット","description":"＊2018年12月11日追記\nDirectional Lightの無いワールドに対応したshaderを同梱しました。\n\nhttps://chemical15.booth.pm/items/1129368\n↑の商品の宝石のみのバージョンになります\n\n＊2018年12月10日更新\nDirectional Lightの数値が小さいワールドにも対応したshaderを同梱しました。\n\n■サンプル\nwrld_8d431151-a506-489b-b00c-4809f42aca27\nこのIDを\nhttp://teruaki-tsubokura.com/vrchat/\nのページで使用すると、実物を見られるワールドに入れます。\n\n■使い方\nFBXとMaterialが入っています。\nお好みの組み合わせで使ってください。\n\n■禁則事項\n政治的利用\n特定の信条や宗教のための使用\n公序良俗に反する行為\n再配布\nその他製作者が不適切と判断したもの\n\n■やっていい事\n改変\n\nこの製品には　@nD_ntny　様作成のshaderが使われております。\n配布先：https://twitter.com/nD_ntny/status/1013074942626164736","url":"https://booth.pm/ja/items/1129496","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/9585a184-fff0-488e-8a9d-612c758951c2/i/1129496/42a66d9a-0ab3-44ec-908e-12f72d38058b_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="OLwIKuSydFYAMuuoxjQcIIC+jshdqvQ8mRxF6ol5x54="></script>
+    nonce="J5K80B2u3gYuI5VbLKfydFfuZJIblt0efVz4vULRA48="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -402,9 +402,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
