--- a/VRChat/68/1129368.html
+++ b/VRChat/68/1129368.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "xrZVFmFqKOLVkCSoHYFQpWNYKZ6L646/uKZBhOlbneg="></script>
+    "xm/62dr5OAHTScf5Ij6R6997QI8P0lEKPcww8t01RQY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRchat向け　unityだけで作れるアクセサリー作成キット","description":"＊2018年12月11日追記\nDirectional Lightの無いワールドに対応したshaderを同梱しました。\nライト無ワールド用　というフォルダには、Directional Lightの無いワールド対応のパーツが入ったシーンが入っています。\n\n※2枚目の画像はクリックで動きます\nhttps://chemical15.booth.pm/items/1129496\n↑宝石のみも販売しています\n\n＊2018年12月10日更新\nDirectional Lightの数値が小さいワールドにも対応したshaderを同梱しました。\n更新版　というフォルダには、暗いワールド対応のパーツが入ったシーンが入ってます。\n※明るいワールドでは光りすぎる事がありますのでご注意ください。\n\n\n■\nunityだけで様々なアクセサリーが作れるキットです。\n23種類の宝石パーツと、14種類の金属パーツと誕生石をイメージしたマテリアルと3種類のシェーダーが入っています。\n\n■サンプル\nwrld_8d431151-a506-489b-b00c-4809f42aca27\nこのIDを\nhttp://teruaki-tsubokura.com/vrchat/\nのページで使用すると、実物を見て組み立てられる（デスクトップだと難しいかもしれません）ワールドに入れます。\n※まだワールドはテスト版ですので、一部ギミックが完成しておりません\n\n■使い方\nhttps://youtu.be/j8rF2qmGvi4（YouTubeへ飛びます）\n上記URLで使い方の説明の動画が見れます。\n\n■ペアリングとして使用する場合のみ、このキットで作ったものを相手へ渡すことを許可します。\n\n■免責事項\nこのデータの使用によって発生したいかなる損害・損失・トラブルについて、作者は一切の責任を負いません\n\n■禁則事項\n政治的利用\n特定の信条や宗教のための使用\n公序良俗に反する行為\n\n再配布\n※ペアリングとして使用する場合のみ、このキットで作ったものを相手へ渡すことを許可します。\nプロジェクトその物や、この商品その物の再配布は禁止です。\n必ず動画の手順で渡して下さい。\n\n金銭の関わらない範囲で使用してください\n不特定多数に再配布することを禁止します\n\nその他製作者が不適切と判断したもの\n\n■やっていい事\n改変\n\n\n※上記以外の使用については作者にお問い合わせください。\n\n連絡先：https://twitter.com/chemical_15_VR\n\nこの製品には　@nD_ntny　様作成のshaderが使われております。\n配布先：https://twitter.com/nD_ntny/status/1013074942626164736","url":"https://booth.pm/ja/items/1129368","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/9585a184-fff0-488e-8a9d-612c758951c2/i/1129368/1d6334fe-7045-4c50-8b2f-d69a6aab13c7_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="xrZVFmFqKOLVkCSoHYFQpWNYKZ6L646/uKZBhOlbneg="></script>
+    nonce="xm/62dr5OAHTScf5Ij6R6997QI8P0lEKPcww8t01RQY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -495,9 +495,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
