--- a/VRChat/55/1129455.html
+++ b/VRChat/55/1129455.html
@@ -79,7 +79,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "tlKZmdY9J+96yUmMHHbAxNogM+iSy867h2fWdN5wYlI="></script>
+    "TKlcyViFERqbaQj7ge4kVkR1BOkSXXgT7PlrFzi6fDo="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"給水用帽子","description":"何のためにあるのか解らない給水用の帽子です。\n自分の好きな飲み物をセットして楽しんでください。\nお酒をセット出来たら今日の主役になれます。\n△590\n\n内容物\n・beerhat.fbx\n・beerhat用テクスチャ\n・おまけデータ（給水用チューブ）","url":"https://booth.pm/ja/items/1129455","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/c4a3cd6b-ee52-4b50-ba9a-4a4bdc690a8e/i/1129455/13757271-ca3b-4ba6-8b18-0a3e7b3a08da_base_resized.jpg"}
     </script>
@@ -93,7 +93,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="tlKZmdY9J+96yUmMHHbAxNogM+iSy867h2fWdN5wYlI="></script>
+    nonce="TKlcyViFERqbaQj7ge4kVkR1BOkSXXgT7PlrFzi6fDo="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -352,9 +352,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
