--- a/VRChat/15/1128715.html
+++ b/VRChat/15/1128715.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "bCX8Q5IbReZGifzP17GvYwmof9n25mjuVMusbhSkYyk="></script>
+    "Mfkfysz3/d2rRQ+UHTII/UxUkzMHz9tC0hZ47THHoDo="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"PictureMaskシェーダー","description":"写真などのテクスチャをマスクテクスチャを使って好きな形に切り抜くことができるシェーダーです\n\n紹介ツイート・使用例↓\nhttps://twitter.com/gatosyocora/status/1070689627676147712\n\n設定可能なパラメータは以下の通りです。\nAuto TextureRatio : チェックをいれるとオブジェクトの縦横比をTextureの縦横比に合わせます\nTexture : 切り抜かれるテクスチャ\nBackColor : オブジェクトの背面の色\n\n[Mask]\nInverse : チェックをいれると切り抜く部分を反転します\nMaskTexture : 切り抜く形のテクスチャ\nOffsetX : マスクの位置を横方向に移動\nOffsetY : マスクの位置を縦方向に移動\nScale : 縦横比を維持したままマスクのサイズを変更\nScaleX : マスクの横のサイズを変更\nScaleY : マスクの縦のサイズを変更\n\n〇利用規約\nプログラムの著作権はgatosyocoraに帰属します。\n商用利用、改変、再配布はしていただいて大丈夫です。\nしかし、使用や改変、再配布時に自作発言を禁止します。\n改変して配布する場合には以下のクレジットを配布物のどこかに含めるようにしてください。\n使用時にはクレジットを記載する必要はありません。\n\n〇免責事項\n本製品を使って発生した問題に対してはgatosyocoraは一切の責任を負いません。\n\n〇更新履歴\n2018/12/9 v1.1 Inverseを追加しました\n\nBoostもしていただけるとすごく嬉しいです。","url":"https://booth.pm/ja/items/1128715","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/5daaaeb1-43fa-4c89-8da3-e7e44093dddb/i/1128715/8476beed-093d-46e9-940d-1851b4906a53_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="bCX8Q5IbReZGifzP17GvYwmof9n25mjuVMusbhSkYyk="></script>
+    nonce="Mfkfysz3/d2rRQ+UHTII/UxUkzMHz9tC0hZ47THHoDo="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -388,9 +388,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
